@@ -20,3 +20,4 @@ Other:
 - Add support for 'CLICOLOR_FORCE'/'NO_COLOR' environment variables to force/disable ANSI color output for diagnostics.
 - Added command-line option `--cpp-header-probe` (and `--no-cpp-header-probe`) to probe headers and extension-less files for Emacs marker (see https://trac.cppcheck.net/ticket/10692 for more details)
 - Add "remark comments" that can be used to generate reports with justifications for warnings
+- The whole program analysis is now being executed when "--project" is being used.
